# spine-rs-cli

./: Cargo.toml  README.md
src/: main.rs  spine.rs
